//
//Copyright 2018 The Kubernetes Authors.
//
//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.
//

syntax = "proto3";

package thalescpl.io.ekms.k8s.v1;

option go_package = "github.com/thalescpl-io/k8s-kms-plugin/apis/k8s/v1;k8s";

import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

message DecryptRequest {
  // Version of the KMS plugin API.
  string version = 1;
  // The data to be decrypted.
  bytes cipher = 2;
  // Required. The Keyring that is holding the key to use
  string keyring_id = 3;
  // Required. The Key to use
  string key_id = 4;
}

message DecryptResponse {
  // The decrypted data.
  bytes plain = 1;
}

message EncryptRequest {
  // Version of the KMS plugin API.
  string version = 1;
  // The data to be encrypted.
  bytes plain = 2;
  // Required. The Keyring that is holding the key to use
  string keyring_id = 3;
  // Required. The Key to use
  string key_id = 4;
}

message EncryptResponse {
  // The encrypted data.
  bytes cipher = 1;
}
